src/stubs/resources/sass/tabler.scss
// ---------------------------------------
// Tablar styles and configuration
// ---------------------------------------

// Default (LTR) Tabler Styles.
// DISABLE this line if you want to enable Right-to-Left (RTL) support.
@import "../../node_modules/@tabler/core/scss/tabler";

// ENABLE the following line for Right-to-Left (RTL) support.
// @import "../../node_modules/@tabler/core/dist/css/tabler.rtl.css";

// Tabler Vendor Styles.
// ENABLE the following line for Vendor style support.
@import "../../node_modules/@tabler/core/scss/tabler-vendors";

// Tabler Flags Styles.
// ENABLE the following line for Flags Icon style support.
// @import "../../node_modules/@tabler/core/scss/tabler-flags";

// Tabler Marketing Styles.
// ENABLE the following line for Marketing style support.
// @import "../../node_modules/@tabler/core/scss/tabler-marketing";

// Tabler Payment Styles.
// ENABLE the following line for Payment Icon style support.
// @import "../../node_modules/@tabler/core/scss/tabler-payments";

// Tabler Social Styles.
// ENABLE the following line for Social Icon style support.
// @import "../../node_modules/@tabler/core/scss/tabler-socials";

// Tabler Webfont Icons
@import "@tabler/icons-webfont/dist/tabler-icons.css";

// Custom Icon Sizes and Styles
@import "../css/icon-style.css";

